feat: 스웨거에 인증로직 연동
