# handler/schedule.go
@@ -29,6 +29,7 @@ func NewScheduleHandler(rg *gin.RouterGroup, usecase domain.ScheduleUsecase) {
 	}
 }
 
+// @Security ApiKeyAuth
 // @Tags Schedules
 // @Summary 티켓 생성 가능한 일정 목록 불러오기
 // @Description 현 날짜 이전의 일정 목록을 불러옵니다. 티켓 생성 화면의'일정 불러오기' 버튼에서 사용됩니다.
@@ -74,6 +75,7 @@ func (h *ScheduleHandler) GetSchedulePreviewsForTicket(c *gin.Context) {
 	))
 }
 
+// @Security ApiKeyAuth
 // @Tags Schedules
 // @Summary 달력에 일정 목록 불러오기
 // @Description 시작 날짜와 종료 날짜 사이의 일정 목록을 불러옵니다
@@ -127,6 +129,7 @@ func (h *ScheduleHandler) GetSchedulePreviewsForCalendar(c *gin.Context) {
 	))
 }
 
+// @Security ApiKeyAuth
 // @Tags Schedules
 // @Summary 세부 일정 불러오기
 // @Description 세부 일정을 불러옵니다
@@ -168,6 +171,7 @@ func (h *ScheduleHandler) GetScheduleById(c *gin.Context) {
 	))
 }
 
+// @Security ApiKeyAuth
 // @Tags Schedules
 // @Summary 일정 생성하기
 // @Description 일정을 생성합니다. presigned-url을 발급받아 이미지 업로드를 완료한 후에, s3 url을 image 값으로 저장합니다.
@@ -209,6 +213,7 @@ func (h *ScheduleHandler) CreateSchedule(c *gin.Context) {
 	))
 }
 
+// @Security ApiKeyAuth
 // @Tags Schedules
 // @Summary 일정 수정하기
 // @Description 일정을 수정합니다. presigned-url을 발급받아 이미지 업로드를 완료한 후에, s3 url을 image 값으로 저장합니다.
@@ -276,6 +281,7 @@ func (h *ScheduleHandler) UpdateSchedule(c *gin.Context) {
 	))
 }
 
+// @Security ApiKeyAuth
 // @Tags Schedules
 // @Summary 일정 삭제하기
 // @Description 일정을 삭제합니다
